# testbedui-plugins

./: .gitignore  .gitmodules  AGENTS.md  FCS_NAME_CONVERSION.md  IF_IMPROVEMENT_PROPOSAL.md  PROJECT_IMPORT_RULE.md  README.md  TEST_IMPORT_RULE.md  build.gradle.kts  gradle.properties  local.properties  rag_suggested.md  repomix.txt  settings.gradle.kts  start-testbed.sh  test.pcap
.gemini/: settings.json
apps/appupdate/: build.gradle.kts  generate_test_apk.sh
apps/appupdate/src/main/: AndroidManifest.xml
apps/assets-attacker-app/: build.gradle.kts
apps/assets-attacker-app/src/main/: AndroidManifest.xml
apps/assets-target-app/: build.gradle.kts
apps/assets-target-app/src/main/: AndroidManifest.xml
apps/directboot/: build.gradle.kts
apps/directboot/src/main/: AndroidManifest.xml
apps/encryption/: build.gradle.kts
apps/encryption/src/main/: AndroidManifest.xml
apps/openurl/: build.gradle.kts
apps/target-test-app/: build.gradle.kts
apps/uniqueid/: README.md  build.gradle.kts
common-utils/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
legacy-stash/acvpkernel/src/main/cpp/: CMakeLists.txt  alg_aead.c  alg_aead.h  alg_cipher.c  alg_cipher.h  alg_common.c  alg_common.h  alg_drbg.c  alg_drbg.h  alg_hash.c  alg_hash.h  main.c  message.c  message.h  util.c  util.h
legacy-stash/uniqueid/: build.gradle
reference/: EFFICIENCY_GUIDE.md  TEST_CONVENTIONS.md  TOOL_USAGE.md
test-sample/: build.gradle.kts
tools/mutton-agent/: README.md  build.gradle.kts  mcp-test.main.kts
(+118 files in other folders)
